/*
 * $Id: ChangeLog,v 1.3641 2004/11/30 20:19:46 ptsarenko Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-11-30 22:00 UTC+0100 Ath <Ath at ath doge nl>
  * source/rtl/memoedit.prg
  * source/rtl/teditor.prg
    ! fixed for being Clipper-compatible in read/only mode
      (again) Hope ppl leave compatibility in place...
      UDF should be called in r/o mode as well

2004-11-30 22:00 UTC+0200 Pavel Tsarenko <tpe2@mail.ru>
  * makefile.wc
    ! Fixed rules for source/rtl/gtwvt/wvtclass.prg
  * dll_w32.bat
    * Corrected env variables
    * wmake output redirected to dll_w32.log
  * hrbdll.wc
    ! Fixed some rules

  + doc/en/ct/maxline.txt
  + doc/en/ct/numcount.txt
  + doc/en/ct/numline.txt
  + doc/en/ct/scrmark.txt
  + doc/en/ct/spread.txt
  + doc/en/ct/untext.txt
    + Added documentation for CT functions

2004-11-30 14:45 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
  * source/rtl/tbrowse.prg
    ! ::colPos must not set ::lConfigured to .F. if the column where I want to
    go is a frozen one (in other words it was not taking into account frozen
    columns)

2004-11-29 23:50 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.nt
  * makefile.vc
    + advapi32.lib to LIBS2
  * contrib/xwt/src/xwt_win/xwt_win_framewnd.c
    * cast

2004-11-29 23:30 UTC+0200 Pavel Tsarenko <tpe2@mail.ru>
  + source/ct/like.prg
    + added: LIKE() function
  + source/ct/lton.c
    + added: LTON() function
  + source/ct/maxline.c
    + added: MAXLINE() function
  + source/ct/numcount.c
    + added: NUMCOUNT() function
  + source/ct/numline.c
    + added: NUMLINE() function
  + source/ct/screen3.prg
    + added: CHARWIN(), CLEARSLOW(), COLORWIN(), COLORREPL(),
             SAYSPREAD(), SAYMOVIN(), SAYDOWN(),
             SCREENSTR(), STRSCREEN(),
             CLEAREOL(), CLWIN(), CLEOL() functions