@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3641 2004/11/30 20:19:46 ptsarenko Exp $
+ * $Id: ChangeLog,v 1.3642 2004/11/30 21:58:55 ath1 Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,17 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-12-01 13:10 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
+  * /include/regex.h
+  * /source/rtl/regex.c
+  * /source/rdd/dbfcdx/dbfcdx1.c
+    + macro hb_isregexstring( x )
+
+  * /include/dbinfo.ch
+    + DBRI_RAWRECORD, DBRI_RAWMEMOS, DBRI_RAWDATA
+  * /source/rdd/dbf1,c
+    - added new DBRI_RAW* options to hb_dbfRecInfo() ( use with DBRECORDINFO() )
+      to return raw data from a DBF record
 
 2004-11-30 22:00 UTC+0100 Ath <Ath at ath doge nl>
   * source/rtl/memoedit.prg
